feat: 스크롤 디테일 챙기기

--- a/src/app/components/hiring/styles.module.css
+++ b/src/app/components/hiring/styles.module.css
@@ -5,6 +5,8 @@
   position: relative;
   overflow: hidden;
   z-index: 101;
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
 }
 
 .contentWrapper {
