--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,13 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+ul {
+  list-style: none;
+}
+
+button {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
